# mu-lang

./: .gitignore  ASYNC.md  DISCORD_BOT.md  DISCORD_MODULE.md  DISCORD_PYTHON_VS_RUST.md  DISCORD_RUST.md  DISCORD_RUST_GATEWAY.md  EXCEPTION.md  EXTENSIONS.md  HTTP.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  KEEP_ALIVE_IMPLEMENTATION.md  QUICKSTART.md  README.md  README_MAIN.md  RUST_IMPLEMENTATION_SUMMARY.md  RUST_MIGRATION.md  RUST_QUICKSTART.md  SETUP_GUIDE.md  TEST_GATEWAY.md  benchmark_bytecode.py  benchmark_fast.py  benchmark_optimizations.py  benchmark_pure_execution.py  benchmark_rust.py  build_rust.sh  d.mu  d_rust.mu  d_rust_full.mu  d_rust_old.mu  mm.py  mm_async.py  mm_debug.py  mm_file.py  mm_http.py  mm_interpreter.py  mm_lexer.py  mm_parser.py  mm_stdlib.py  (+21 more)
.claude/: claude.md
examples/: DISCORD_QUICKSTART.md  async_await_example.mu  async_demo.mu  async_simple.mu  async_test.mu  class_demo.mu  control_flow_features.mu  dict_comprehension_example.mu  dict_demo.mu  discord_advanced_features.mu  discord_bot_advanced.mu  discord_bot_advanced_d.mu  discord_bot_advanced_features.mu  discord_bot_api.mu  discord_bot_async_example.mu  discord_bot_gateway.mu  discord_bot_interactions.mu  discord_bot_modal_slash.mu  discord_bot_polling.mu  discord_bot_rust.mu  discord_bot_safe_api.mu  discord_bot_simple.mu  discord_bot_simple_d.mu  discord_bot_simple_gateway.mu  discord_bot_utility.mu  discord_webhook_example.mu  env_demo.mu  exception_demo.mu  factorial.mu  fibonacci.mu  file_io_demo.mu  fizzbuzz.mu  generator_example.mu  hello.mu  http_demo.mu  import_example.mu  lambda_example.mu  list_comprehension_example.mu  list_operations.mu  math_module.mu  (+8 more)
mumei-rust/: .gitignore  Cargo.toml  README.md  build.sh  pyproject.toml  test_rust.py
mumei-rust/benches/: lexer_bench.rs
mumei-rust/src/: ast.rs  builtins.rs  bytecode.rs  cache.rs  compiler.rs  discord.rs  environment.rs  gateway.rs  http.rs  interpreter.rs  jit.rs  lexer.rs  lib.rs  main.rs  parser.rs  token.rs  value.rs  vm.rs  vm_fast.rs
syntaxes/: mumei.tmLanguage.json
vscode-mumei/: INSTALL.md  README.md  install.bat  install.sh  language-configuration.json  package.json
vscode-mumei/syntaxes/: mumei.tmLanguage.json
