[package]
name = "mumei-rust"
version = "0.1.0"
edition = "2021"
authors = ["Mumei Language Team"]
description = "High-performance Rust implementation of the Mumei programming language"

[lib]
name = "mumei_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
# PyO3 - PythonとRustの橋渡し
pyo3 = { version = "0.20", features = ["extension-module", "anyhow"] }

# シリアライゼーション
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# エラーハンドリング
thiserror = "1.0"
anyhow = "1.0"

# ユーティリティ
regex = "1.10"
once_cell = "1.19"

[dev-dependencies]
# テストユーティリティ
criterion = "0.5"

[profile.release]
# リリースビルド最適化
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
# 開発ビルド高速化
opt-level = 0

[[bench]]
name = "lexer_bench"
harness = false

[[bench]]
name = "parser_bench"
harness = false
