[package]
name = "mumei-rust"
version = "0.1.0"
edition = "2021"
authors = ["Mumei Language Team"]
description = "High-performance Rust implementation of the Mumei programming language"

# スタンドアロンバイナリとライブラリの両方をビルド
[[bin]]
name = "mumei"
path = "src/main.rs"

[lib]
name = "mumei_rust"
crate-type = ["rlib"]

[dependencies]
# PyO3を削除 - スタンドアロン実行形式に移行

# シリアライゼーション
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# エラーハンドリング
thiserror = "1.0"
anyhow = "1.0"

# ユーティリティ
regex = "1.10"
once_cell = "1.19"

# HTTP/REST API
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.35", features = ["full"] }
urlencoding = "2.1"

# WebSocket (Discord Gateway)
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
url = "2.5"

# JITコンパイル（Cranelift）
cranelift = "0.109"
cranelift-module = "0.109"
cranelift-jit = "0.109"
cranelift-native = "0.109"

[dev-dependencies]
# テストユーティリティ
criterion = "0.5"

[profile.release]
# リリースビルド最適化
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
# 開発ビルド高速化
opt-level = 0

[[bench]]
name = "lexer_bench"
harness = false
